@@ -34,6 +34,7 @@
 
 
 require "___scriptsdir___/general.pl";
+require "___scriptsdir___/platform.pl";
 require "___scriptsdir___/util.pl";
 require "___scriptsdir___/file.pl";
 require "___scriptsdir___/xml.pl";
@@ -43,6 +44,7 @@ require "___scriptsdir___/xml.pl";
 
 $name = "disks";
 $version = "0.1.0";
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2");
 
 $description =<<"end_of_description;";
        Configures locally mounted partitioned media.
@@ -824,7 +826,8 @@ sub filter
 
 # --- Main --- #
 
-xst_init($name, $version, $description, @ARGV);
+&xst_init ($name, $version, $description, @ARGV);
+&xst_platform_ensure_supported (@platforms);
 
 # Do our thing.
 
