@@ -1,5 +1,9 @@
 2001-02-09  Hans Petter Jansson  <hpj@ximian.com>
 
+	* *-conf.in: Added platform comparisons and die if necessary.
+
+2001-02-09  Hans Petter Jansson  <hpj@ximian.com>
+
 	* platform.pl.in: (xst_platform_ensure_supported): Implement.
 
 2001-02-09  Hans Petter Jansson  <hpj@ximian.com>
